--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#121517" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@900?family=Cairo:wght@900&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@900&family=Cairo:wght@900&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <title>Filippo Tinnirello | Front-end developer</title>
   </head>
   <body>
