--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Filippo Tinnirello | Frontend & WordPress developer</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('set', 'anonymizeIp', true);
+      gtag('config', 'G-7DBNB7H4P5');
+    </script>
   </head>
   <body>
     <div id="root"></div>
