--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#121517" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Filippo Tinnirello | Freelance remote WordPress developer B2B</title>
+    <title>Filippo Tinnirello | B2B Freelance WordPress developer</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
