--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#121517" />
+    <link rel="canonical" href="https://www.filippotininrello.it" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Filippo Tinnirello | B2B Freelance WordPress Developer</title>
+    <title>Filippo Tinnirello | Freelance WordPress Developer</title>
+     <meta name="description" content="Professional freelance WordPress developer based in Verona. Specialized in custom WordPress solutions, theme development, and website optimization." />
+    <meta name="keywords" content="freelance wordpress developer verona, wordpress expert verona, web developer verona, custom wordpress development" />
+    <meta name="author" content="Filippo Tinnirello" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -22,3 +28,18 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Freelance WordPress Developer Verona",
+  "description": "Professional freelance WordPress development services in Verona",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Verona",
+    "addressCountry": "IT"
+  },
+  "priceRange": "€€",
+  "serviceType": ["WordPress Development", "Theme Development", "Website Optimization"]
+}
+</script>
