--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#121517" />
-    <link rel="canonical" href="https://www.filippotininrello.it" />
+    <link rel="canonical" href="https://www.filippotinnirello.it" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Filippo Tinnirello | Freelance WordPress Developer</title>
@@ -22,24 +22,24 @@
       gtag('set', 'anonymizeIp', true);
       gtag('config', 'G-7DBNB7H4P5');
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "Freelance WordPress Developer Verona",
+        "description": "Professional freelance WordPress development services in Verona",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Verona",
+          "addressCountry": "IT"
+        },
+        "priceRange": "€€",
+        "serviceType": ["WordPress Development", "Theme Development", "Website Optimization"]
+      }
+      </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "ProfessionalService",
-  "name": "Freelance WordPress Developer Verona",
-  "description": "Professional freelance WordPress development services in Verona",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Verona",
-    "addressCountry": "IT"
-  },
-  "priceRange": "€€",
-  "serviceType": ["WordPress Development", "Theme Development", "Website Optimization"]
-}
-</script>
