--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="canonical" href="https://www.filippotinnirello.it" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Filippo Tinnirello | Freelance WordPress Developer</title>
-     <meta name="description" content="Professional freelance WordPress developer based in Verona. Specialized in custom WordPress solutions, theme development, and website optimization." />
-    <meta name="keywords" content="freelance wordpress developer verona, wordpress expert verona, web developer verona, custom wordpress development" />
+    <title>Filippo Tinnirello | Freelance WordPress Developer (Verona)</title>
+     <meta name="description" content="Sviluppatore WordPress freelance a Verona specializzato nella creazione di temi personalizzati, ottimizzazione delle prestazioni e sviluppo di plugin." />
+    <meta name="keywords" content="freelance wordpress developer verona, wordpress esperto verona, web developer verona, custom wordpress development" />
     <meta name="author" content="Filippo Tinnirello" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script>
+    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script-->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -39,7 +39,9 @@
       </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      CIAO
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
