--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div id="root">
-      CIAO
+      freelance wordpress developer verona
     </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
