--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta name="author" content="Filippo Tinnirello" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
-    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script-->
+    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('set', 'anonymizeIp', true);
       gtag('config', 'G-7DBNB7H4P5');
-    </script>
+    </script-->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
