--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#121517" />
-    <link rel="canonical" href="https://www.filippotinnirello.it" />
+    <link rel="alternate" hreflang="it" href="https://www.filippotinnirello.it/" />
+    <link rel="alternate" hreflang="en" href="https://www.filippotinnirello.it/en/" />
+    <link rel="alternate" hreflang="x-default" href="https://www.filippotinnirello.it/" />
+    <link rel="canonical" href="https://www.filippotinnirello.it/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Filippo Tinnirello | Freelance WordPress Developer (Verona)</title>
