--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
   </head>
   <body>
     <div id="root">
-      freelance wordpress developer verona
+      <pre>freelance wordpress developer verona</pre>
     </div>
+    <div id="portal-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
