--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="author" content="Filippo Tinnirello" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
+    <meta name="google-site-verification" content="XPdDyWyvZPnIR1AY6J2Cn20mTcZ4ET1eX3iIKOY2ysY" />
     <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
