--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
     <meta name="google-site-verification" content="XPdDyWyvZPnIR1AY6J2Cn20mTcZ4ET1eX3iIKOY2ysY" />
-    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-7DBNB7H4P5"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('set', 'anonymizeIp', true);
-      gtag('config', 'G-7DBNB7H4P5');
-    </script-->
+    <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
